fixed divider to work properly on mobile screens

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -33,7 +33,11 @@
     font-size: 3em;
 }
 
-@media not handheld{
+#divider{
+    display: block;
+}
+
+@media (min-width: 680px){
     #divider{
         display: inline;
     }
